--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  if logged_in_username
+    .welcome= 'Welcome ' + logged_in_fullname + '!'
