--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
