--- a/views/index.pug
+++ b/views/index.pug
@@ -15,4 +15,4 @@ block content
       mobile device and you can complete the post in the Instagram app.
 
     if logged_in_username
-      a(href="//schedule") Schedule a new post!
+      a(href="/schedule") Schedule a new post!
