--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,7 @@ html
     title= title
     link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+    block styles
   body
     block content
