--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,9 +2,15 @@ doctype html
 html
   head
     title= title
+    meta(charset='utf-8')
     link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
 
     block styles
   body
     block content
+
+    if page_data
+      script.
+        window.augustus = JSON.parse('!{JSON.stringify(page_data)}');
+    block scripts
